--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Nav from "../components/Nav.astro";
 export interface Props {
   title: string;
 }
@@ -22,6 +23,7 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
+    <Nav />
     <slot />
   </body>
 </html>
@@ -30,6 +32,7 @@ const { title } = Astro.props;
     --accent: rgba(0, 0, 0, 1);
     --accent-white: rgba(248, 249, 250, 1);
     --accent-secondary: rgba(52, 58, 64, 1);
+    --accent-secondary-alpha: rgba(52, 58, 64, 0.7);
     --accent-3: rgba(102, 102, 110, 1);
     --accent-4: rgba(137, 137, 150, 1);
     --primary: rgba(2, 187, 182, 1);
@@ -74,7 +77,6 @@ const { title } = Astro.props;
   h5,
   h6 {
     margin-top: 0;
-    margin-bottom: 1rem;
     font-weight: 500;
   }
   body {
