--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -10,9 +10,7 @@ const links = [
 ];
 ---
 
-<nav
-  class="flex py-2 px-3 justify-between items-end border border-solid border-red-400"
->
+<nav class="flex py-2 px-3 justify-between items-end">
   <ul
     id="menu"
     data-visible="false"
