add icons for socials

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -148,5 +148,6 @@ const images: Imag[] = [
   img:hover {
     transform: scale(1.1);
     transition: transform 500ms ease-in-out;
+    cursor: pointer;
   }
 </style>
