--- a/src/components/ImgList.astro
+++ b/src/components/ImgList.astro
@@ -9,6 +9,7 @@ import passion from "../../public/assets/passion.jpg";
 export interface Props {
   amount: number;
   ratio?: number;
+  radius: boolean;
 }
 
 type Imag = {
@@ -17,7 +18,7 @@ type Imag = {
   title: string;
 };
 
-let { amount, ratio = 16 } = Astro.props;
+let { amount, ratio = 16, radius } = Astro.props;
 
 const images: Imag[] = [
   {
@@ -32,22 +33,22 @@ const images: Imag[] = [
     alt: "painting titled passion",
     title: "passion",
   },
-  { src: "/assets/her.jpg", alt: "painting titled her", title: "her" },
 ];
 let imgAmount = images.slice(0, amount);
-console.log(imgAmount);
+let isRadius = radius ? "1%" : "0";
 ---
 
 {
   imgAmount.length > 1 ? (
     imgAmount.map((image, amount, ratio) => (
       <Image
+        style={{ borderRadius: isRadius }}
         src={image.src}
         alt={image.alt}
         data-title={`${image.title}`}
-        width={1600}
-        height={900}
-        aspectRatio={"16:9"}
+        width={1400}
+        height={1400}
+        aspectRatio={"1:1"}
         format="jpg"
       />
     ))
@@ -56,9 +57,9 @@ console.log(imgAmount);
       src={images[0].src}
       alt={images[0].alt}
       data-title={`${images[0].title}`}
-      width={1200}
-      height={1600}
-      aspectRatio={"12:16"}
+      width={1440}
+      height={1440}
+      aspectRatio={"1:1"}
       format="jpg"
     />
   )
@@ -67,19 +68,13 @@ console.log(imgAmount);
   const imgList = document.querySelector("#img-list");
   const image = imgList.children;
   const handleLoad = () => {
-    if (image.length >= 1) {
-      console.log(image[0]);
-      const singleImg = window.getComputedStyle(image[0]);
-      console.log(singleImg);
-    }
-
     for (let i = 0; i < image.length; i++) {
       image[i].classList.add("img-fade");
     }
   };
   window.addEventListener("load", handleLoad);
 </script>
-<style>
+<style define:vars={{ isRadius }}>
   img {
     display: hidden;
     width: 100%;
@@ -88,9 +83,6 @@ console.log(imgAmount);
     filter: blur(2rem);
     transition: opacity 1s ease-in;
     transition: filter 1s ease-in;
-    overflow-x: hidden;
-    margin-left: -1.5rem;
-    border-radius: 5%;
   }
   .img-fade {
     display: block;
@@ -98,12 +90,8 @@ console.log(imgAmount);
     filter: blur(0rem);
   }
   img:hover {
-    transform: scale(1.1);
-    transition: transform 500ms ease-in-out;
-    cursor: pointer;
-  }
-  img:hover[data-title="hear me"] {
-    transform: none;
+    transform: scale(1.02);
+    transition: transform 500ms ease-out;
     cursor: pointer;
   }
 </style>
