--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -8,11 +8,17 @@ const links = [
 ];
 ---
 
-<nav class="flex py-3 px-3 justify-between items-end">
+<nav class="container py-3 px-3">
+  <div class="flex justify-between items-center">
+    <h1>
+      Beautiful <span>Disaster Art</span>
+    </h1>
+    <button id="menu-button" class=""></button>
+  </div>
   <ul
     id="menu"
     data-visible="false"
-    class="flex-col w-full top-0 left-0 h-full flex fixed overflow-hidden z-20 justify-center items-center gap-y-3"
+    class="mobile-menu flex flex-col gap-y-3 items-center hidden fixed inset-0 bg-black bg-opacity-50"
   >
     {
       links.map((link) => {
@@ -24,39 +30,23 @@ const links = [
       })
     }
   </ul>
-  <h1>
-    Beautiful <span>Disaster Art</span>
-  </h1>
-  <button id="menu-button" class=""></button>
-  <button id="close-button" class="z-[50] hidden"> </button>
 </nav>
 <script>
   const menuButton = document.querySelector("#menu-button");
-  const closeButton = document.querySelector("#close-button");
   const menu = document.querySelector("#menu");
 
-  const visibility = menu.getAttribute("data-visible");
-
   function toggleMenu() {
-    if ((closeButton.style.display = "none")) {
-      menu.style.transform = "translateY(0%)";
-      closeButton.style.display = "block";
-
-      menuButton.style.display = "none";
-    }
-  }
-  function closeMenu() {
-    if ((closeButton.style.display = "sticky")) {
-      menu.style.transform = "translateY(-100%)";
-      closeButton.style.display = "none";
-      menuButton.style.display = "block";
-    }
+    menu.classList.toggle("hidden");
   }
 
   menuButton.addEventListener("click", toggleMenu);
-  closeButton.addEventListener("click", closeMenu);
 </script>
 <style>
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
   h1 {
     color: var(--accent-4);
     font-family: var(--inconsolata);
@@ -69,18 +59,8 @@ const links = [
     color: var(--primary);
   }
 
-  #menu {
-    transform: translateY(-100%);
-    background-color: var(--accent-secondary-alpha);
-    backdrop-filter: blur(0.2rem);
-    transition: transform 500ms ease-out;
-  }
-  li {
-    font-family: var(--athiti);
-  }
-
   #menu-button {
-    z-index: 100;
+    z-index: 1001;
     width: 2rem;
     aspect-ratio: 1;
     border: 0;
@@ -88,28 +68,27 @@ const links = [
     background-size: cover;
     background-repeat: no-repeat;
   }
-  #close-button {
-    margin: 0.75rem;
-    z-index: 100;
-    width: 2rem;
-    aspect-ratio: 1;
-    position: fixed;
-    top: 0;
-    right: 0;
-    border: 0;
-    background: url("/public/assets/icons/close-menu.svg");
-    background-size: cover;
 
-    background-repeat: no-repeat;
-  }
-  .slide-down {
-    transform: translateY(0);
-    transition: transform 0.3s ease-in-out;
+  .mobile-menu {
+    z-index: 1000;
+    justify-content: center;
   }
 
-  #menu {
-    transform: translateY(-100%);
-    background-color: var(--accent-secondary-alpha);
-    backdrop-filter: blur(0.2rem);
+  li {
+    font-family: var(--athiti);
+  }
+
+  @media (min-width: 768px) {
+    #menu-button {
+      display: none;
+    }
+
+    .mobile-menu {
+      display: flex;
+      flex-direction: row;
+      gap: 1rem;
+      position: static;
+      background-color: transparent;
+    }
   }
 </style>
