--- a/src/components/ImgList.astro
+++ b/src/components/ImgList.astro
@@ -1,10 +1,15 @@
 ---
 import { Image, Picture } from "@astrojs/image/components";
 import type { CollectionEntry } from "astro:content";
+import { getCollection } from "astro:content";
 
-let { amount, radius } = Astro.props;
-const { art } = Astro.props;
+// art?: CollectionEntry<"art">[];
+
+const art: CollectionEntry<"art">[] = await getCollection("art");
+
+const { amount, radius } = Astro.props;
 let artAmount = art.slice(0, amount);
+console.log(art.slice(0, 2));
 let isRadius = radius ? "1%" : "0";
 ---
 
