--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,6 +23,7 @@ import ImgList from "../components/ImgList.astro";
       <ImgList amount={1} radius={false} />
     </section>
   </main>
+  <div class="w-full"></div>
 </Layout>
 
 <style>
