fix footer spacing

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import ImgList from "../components/ImgList.astro";
 ---
 
 <Layout title="Beautiful Disaster Art">
-  <main class="py-2 px-2">
+  <main class="pt-2 px-2">
     <section class="py-2">
       <p>
         Welcome to <span>Beautiful Disaster</span> Art, where my art is <span
@@ -23,7 +23,6 @@ import ImgList from "../components/ImgList.astro";
       <ImgList amount={1} radius={false} />
     </section>
   </main>
-  <div class="w-full"></div>
 </Layout>
 
 <style>
