--- a/src/components/ImgList.astro
+++ b/src/components/ImgList.astro
@@ -122,6 +122,9 @@ let isRadius = radius ? "1%" : "0";
     transition: opacity 0.5s ease;
     background-color: rgba(0, 0, 0, 0.5);
   }
+  a:hover {
+    text-decoration-color: var(--primary-2);
+  }
 
   .text {
     color: white;
@@ -129,6 +132,7 @@ let isRadius = radius ? "1%" : "0";
     font-family: var(--inconsolata);
     font-weight: 300;
     text-align: center;
+    text-decoration-color: hotpink;
   }
   .overlay:hover {
     opacity: 1;
