--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,6 +26,7 @@ const { title } = Astro.props;
   <body>
     <Nav />
     <slot />
+    <div class="flex w-full py-4"></div>
     <Footer />
   </body>
 </html>
