--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,9 +2,9 @@
 const path = Astro.url.pathname;
 
 let sticky = false;
-if (path === "/") {
-  sticky = true;
-}
+// if (path === "/") {
+//   sticky = true;
+// }
 ---
 
 <footer
