add prect for imgList

--- a/src/pages/art/[slug].astro
+++ b/src/pages/art/[slug].astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 import { CollectionEntry, getEntryBySlug } from "astro:content";
-import { Image } from "@astrojs/image/components";
+
 import getArt from "../../utils/getArt";
 
 const { slug } = Astro.params;
@@ -13,7 +13,7 @@ const entry: CollectionEntry<"art"> | undefined = await getEntryBySlug(
   "art",
   slug
 );
-const artList = getArt();
+const artList = await getArt();
 const currentIndex = artList.findIndex((art) => art.slug === slug);
 const prevPage =
   currentIndex > 0
@@ -29,18 +29,15 @@ const { Content, headings } = await entry.render();
 if (entry === undefined) {
   return Astro.redirect("/404");
 }
-
-// console.log(entry);
 ---
 
 <Layout title={entry.data.title}>
-  <Image
-    alt={entry.data.title}
+  <img
     src={entry.data.src}
+    alt={entry.data.title}
+    class={`img-fade aspect-auto`}
     width={1400}
     height={1400}
-    aspectRatio={1}
-    format={"jpg"}
   />
   <h3>{entry.data.title}</h3>
   <Content />
